# sqs-queue-viewer

./: Makefile  README.md  pyproject.toml  setup.cfg
sqs_queue_viewer/: __main__.py
