[metadata]
name = sqs-queue-viewer
version = 0.1.0
url = https://github.com/thrau/sqs-queue-viewer
author = Thomas Rausch
author_email = thomas@localstack.cloud
description = SQS Queue Viewer for LocalStack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:

install_requires =
    rich
    boto3

[options.extras_require]
dev =
    black>=22.1
    isort>=5.10
    pytest>=7
    mypy_boto3_sqs

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md
